fix empty button and some ccontrast

--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ body {
 .footer {
     padding: 10px;
     text-align: center;
-    background-color: #979595;
+    background-color: #A9A7A7;
     width: 100%;
     z-index: 998;
 }
